<resources>
    <string name="app_name">My Application</string>

    <string name="main_view_msg">Dorm Review</string>
    <string name="search_msg_fragment">Search for room</string>
    <string name="searchButton">Search</string>

    <!-- for search screen -->
    <string-array name="houseSpinner_entries">
        <item>All Houses</item>
        <item>Main</item>
        <item>Strong</item>
        <item>Raymond</item>
        <item>Davison</item>
        <item>Lathrop</item>
        <item>Jewett</item>
        <item>Josselyn</item>
        <item>Cushing</item>
        <item>Noyes</item>
    </string-array>

    <string-array name="floorSpinner_entries">
        <item>All Floors</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>

    <string-array name="roomTypeSpinner_entries">
        <item>All Room Types</item>
        <item>Single</item>
        <item>Double</item>
        <item>Triple</item>
        <item>Quad</item>
        <item>Suite</item>
        <item>Two Room Double</item>
        <item>Two Room Triple</item>
    </string-array>

    <string-array name="availabilitySpinner_entries">
        <item>Available rooms</item>
        <item>All rooms</item>
    </string-array>

    <!-- for room selection screen -->
    <string name="room_id">Room ID</string>
    <string name="house">House Name</string>
    <string name="floor">Floor #</string>
    <string name="room_type">Room Type</string>
    <string name="availability">Available?</string>
    <string name="new_search">New Search</string>
    <string name="no_results_msg">No results</string>
    <string name="available">Available</string>
    <string name="not_available">Not available</string>

    <!-- for room profile screen -->
    <string name="back2">Back</string>
    <string name="room_id_text">id</string>
    <string name="description">description_test_def</string>
    <string name="review_title">Reviews</string>
    <string name="write_a_review">Write a review</string>
    <string name="headline">headlineText</string>
    <string name="review">reviewText</string>
    <string name="no_reviews_yet">No reviews yet!</string>

    <!-- for write review screen -->
    <string name="write_review_title">Write Review</string>
    <string name="add_rating">Add rating</string>
    <string name="add_headline">Add headline</string>
    <string name="add_written_review">Add written review</string>
    <string name="add_review">Add review</string>
    <string name="back3">Back</string>
    <string name="missing_item_fields_error">Both headline and written review are required!</string>

</resources>