<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/roomIdText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/room_id_text"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/roomIdText"
        tools:context=".view.RoomProfileFragment">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager2"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageButton
            android:id="@+id/btnPrevious"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:src="@android:drawable/ic_media_previous" />

        <ImageButton
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:src="@android:drawable/ic_media_next" />

    </RelativeLayout>

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/description"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/reviewTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <TextView
        android:id="@+id/reviewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/review_title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/avgRatingBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RatingBar
        android:id="@+id/avgRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/reviewTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/avgRatingBar"
        app:layout_constraintBottom_toTopOf="@+id/rowButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

    <TextView
        android:id="@+id/reviewsIsEmpty"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center"
        android:text="@string/no_reviews_yet"
        android:textSize="16sp"
        android:visibility="gone"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/avgRatingBar"
        app:layout_constraintBottom_toTopOf="@+id/rowButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/rowButtons"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back2Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back2"
            android:textColor="@color/white"
            android:background="@drawable/btr_bg"/>

        <Space
            android:layout_width="20dp"
            android:layout_height="50dp"/>

        <Button
            android:id="@+id/writeReviewButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/write_a_review"
            android:textColor="@color/white"
            android:background="@drawable/btr_bg"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>