...
        android:gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:textColor="@color/black"
        android:visibility="gone" />

    <Button
        android:id="@+id/newSearchButton"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/new_search"
...
